# kiten_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/meshes/: README.txt
assets/shaders/GL/: fs_basic.glsl  vs_basic.glsl
src/: Application.cpp  Application.h
src/core/: FileLoader.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  Timer.cpp  Timer.h  Transform.h
src/math/: DataTypes.h
src/platform/: Window.cpp  Window.h
src/renderer/: Mesh.cpp  Mesh.h  MeshData.h  Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h  Shader.cpp  Shader.h  Vertex.h
src/renderer/gl/: GL_Renderer.cpp  GL_Renderer.h  GL_Shader.cpp  GL_Shader.h
src/renderer/interface/: IRenderer.h  IShader.h
src/resources/: MeshData.h  Vertex.h
src/scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Transform.cpp  Transform.h
src/scene/components/: CameraComponent.cpp  CameraComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  IComponent.h  PointLightComponent.cpp  PointLightComponent.h  SpotLightComponent.cpp  SpotLightComponent.h
src/scene/geometry/: CubeGenerator.cpp  CubeGenerator.h
